--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,6 +3,8 @@
     <string name="app_name">我的e乐充</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
+    <string name="netDropDown">您的网络不给力,</string>
+    <string name="netBtnText">点此刷新.</string>
 	
 	<!--地址 -->
     <string name="bj_urlb">http://www.hzt360.com/phoneManager</string>
